--- a/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
@@ -45,14 +45,18 @@
                                 <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" /> 
                                 <p:menuitem value="Order Status" url="displayallso.xhtml" />
                             </c:if>
+                            <c:if test="#{dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                                <p:menuitem value="Reject Order" url="returnorder.xhtml" />
+                            </c:if>
                         </p:submenu>
                     </c:if>
-
-                    <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Make Pyament" styleClass="display:block">
+                    <p:submenu label="Payment" styleClass="display:block">
+                        <p:menuitem value="All invoice" url="allinvoice.xhtml" />
+                        <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
                             <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
-                        </p:submenu>
-                    </c:if>
+                        </c:if>
+
+                    </p:submenu>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Reports" styleClass="display:block">
                             <p:menuitem value="Sales Reports" url="#" />
@@ -117,13 +121,15 @@
                 </p:commandButton> 
                 <br></br>
                 <br></br>
+            </h:form>
+            <h:form>
                 <p:panel header="Reject Purchase Order" style="margin-bottom:10px;">
                     <h:panelGrid columns="2" cellpadding="5">
-                        <p:outputLabel value="Reject Reson " />
-                        <p:selectOneMenu id="reson" value="#{salesOrderManagedBean.reason}" style="width:150px">
-                            <f:selectItem itemLabel="Select Reject Reson" value="#{salesOrderManagedBean.reason}" noSelectionOption="true" />
-                            <f:selectItems value="#{salesOrderManagedBean.rejectReasons}" />
-                        </p:selectOneMenu>
+                        <p:outputLabel value="Reject Reson " />                       
+                        <h:selectOneMenu id="reason" value="#{salesOrderManagedBean.reason}" style="width:150px">
+                            <f:selectItem itemLabel="Select Reject Reson" itemValue="" noSelectionOption="true" />
+                            <f:selectItems value="#{salesOrderManagedBean.rejectReasons}" var="reason" />
+                        </h:selectOneMenu>
                     </h:panelGrid>
                     <p:separator />
                     <p:commandButton value="Reject this Order" actionListener="#{salesOrderManagedBean.rejectPo()}" icon="ui-icon-check" />
