--- a/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
@@ -1,12 +1,136 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-    </h:body>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="Create SO" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+
+            <p:panelMenu>
+                <p:submenu label="Home" styleClass="display:block">
+                    <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                </p:submenu>
+                <p:submenu label="Product" styleClass="display:block">
+                    <p:menuitem value="Products" url="displayallproducts.xhtml" />
+                </p:submenu>
+
+                <p:submenu label="Quotation" styleClass="display:block">
+                    <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
+                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
+                </p:submenu>
+                <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Orders" styleClass="display:block">
+                        <c:if test="#{dashboardBean.checkOESCanGeneratePO()|| dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="Create Order" url="pogeneration.xhtml" />
+                            <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
+                        </c:if>
+                        <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" /> 
+                            <p:menuitem value="Order Status" url="displayallso.xhtml" />
+                        </c:if>
+                        <c:if test="#{dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="Reject Order" url="returnorder.xhtml" />
+                        </c:if>
+                    </p:submenu>
+                </c:if>
+                <p:submenu label="Payment" styleClass="display:block">
+                    <p:menuitem value="All invoice" url="allinvoice.xhtml" />
+                    <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                    </c:if>
+
+                </p:submenu>
+                <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Reports" styleClass="display:block">
+                        <p:menuitem value="Sales Reports" url="#" />
+                    </p:submenu>
+                </c:if>
+            </p:panelMenu>
+        </ui:define>
+
+
+        <ui:define name="right">
+            <h:form id="formMain">
+                <br></br>
+                <p:fieldset legend="Sales Order" style="margin-bottom:20px">
+                    <h:panelGrid id="inVodetail" columns="2" cellpadding="5">
+                        <p>Please enter sales order number</p>
+                        <p:outputLabel value="Sales Order: " />
+                        <p:inputText id="quotation" value="#{productReturnManagedBean.returenOrderId}" required="true" label="Sales Order Number"></p:inputText>
+                        <p:commandButton value="Search" actionListener="#{productReturnManagedBean.returnMyOrder()}" update="detailList detailtable" ajax="true"></p:commandButton>
+                    </h:panelGrid>
+                </p:fieldset>
+                <br></br>
+                <p:fieldset id="detailList" legend="Ship To " style="margin-bottom:20px">
+                    <h:panelGrid id="detail" columns="2" cellpadding="5">
+                        <p>Contact Person: </p><h:outputText value="#{productReturnManagedBean.returnOrder.contactPersonName}"/>
+                        <p>Phone Number: </p><h:outputText value="#{productReturnManagedBean.returnOrder.contactPersonPhoneNumber}"/>
+                        <p>Address : </p><h:outputText value="#{productReturnManagedBean.returnOrder.shipTo}"/>
+                        <p>Quotation : </p><h:outputText value="#{productReturnManagedBean.returnOrder.quotationId}"/>
+                    </h:panelGrid>
+                </p:fieldset>
+                <br></br>
+                <p:dataTable id="detailtable" var="lineItem" value="#{productReturnManagedBean.returnOrder.productOrderLineItemList}">
+                    <p:column headerText="Product">
+                        <h:outputText value="#{lineItem.productproductId.productName}" />
+                    </p:column>
+
+                    <p:column headerText="Description">
+                        <h:outputText value="#{lineItem.productproductId.description}" />
+                    </p:column>
+
+                    <p:column headerText="Category">
+                        <h:outputText value="#{lineItem.productproductId.category}" />
+                    </p:column>
+                    <p:column headerText="Unit Price">
+                        <h:outputText value="#{lineItem.price}" />
+                    </p:column>
+                    <p:column headerText="Quantity">
+                        <h:outputText value="#{lineItem.quantity}" />
+                    </p:column>
+                    <p:column headerText="Value">
+                        <h:outputText value="#{lineItem.quantity*lineItem.price}" />
+                    </p:column>
+                    <p:column headerText="Status">
+                        <h:outputText value="#{lineItem.status}" />
+                    </p:column>
+                    <p:column headerText="Reject">
+                        <p:commandButton action="#{productReturnManagedBean.rejectLineItem(lineItem)}" update="detailtable" icon="ui-icon-closethick"/>   
+                    </p:column>
+                </p:dataTable>
+                <br></br>
+                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                <p:panel header="Reject Whole Order" style="margin-bottom:10px;">
+                    <h:panelGrid columns="2" cellpadding="5">
+                        <h:outputLabel value="Reject Reson " />
+                        <h:selectOneMenu id="reson" value="#{productReturnManagedBean.reason}" style="width:150px">
+                            <f:selectItem itemLabel="Select Reject Reson" value="#{productReturnManagedBean.reason}" noSelectionOption="true" />
+                            <f:selectItems value="#{productReturnManagedBean.returnReasons}" />
+                        </h:selectOneMenu>
+                    </h:panelGrid>
+                    <p:separator />
+                    <p:commandButton value="Reject this Order" actionListener="#{productReturnManagedBean.rejectWhole()}" icon="ui-icon-check" />
+                </p:panel>
+                <p:commandButton value="Cancel" actionListener="oesindexpage.xhtml" icon="ui-icon-check" />
+            </h:form>
+        </ui:define>
+    </ui:composition>
+
 </html>
 
