--- a/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
@@ -119,10 +119,17 @@
                 <p:panel header="Reject Whole Order" style="margin-bottom:10px;">
                     <h:panelGrid columns="2" cellpadding="5">
                         <h:outputLabel value="Reject Reson " />
-                        <h:selectOneMenu id="reson" value="#{productReturnManagedBean.reason}" style="width:150px">
-                            <f:selectItem itemLabel="Select Reject Reson" value="#{productReturnManagedBean.reason}" noSelectionOption="true" />
-                            <f:selectItems value="#{productReturnManagedBean.returnReasons}" />
-                        </h:selectOneMenu>
+                        <p:selectOneMenu id="reson" value="#{productReturnManagedBean.reason}" style="width:150px">
+                            <f:selectItem itemLabel="Select Reject Reson" itemValue="" noSelectionOption="true" />
+                            <f:selectItem itemLabel="01 Wrong product" itemValue="01 Wrong product"  />
+                            <f:selectItem itemLabel="02 Wrong product quantity" itemValue="02 Wrong product quantity" />
+                            <f:selectItem itemLabel="03 Wrong price" itemValue="03 Wrong price" />
+                            <f:selectItem itemLabel="04 Wrong ship to address" itemValue="04 Wrong ship to address" />
+                            <f:selectItem itemLabel="05 Wrong contact person" itemValue="05 Wrong contact person" />
+                            <f:selectItem itemLabel="06 Credit check fail" itemValue="" />
+                            <f:selectItem itemLabel="07 Others please contact sales for more information" itemValue="" />
+                            <f:selectItem itemLabel="08 Unable to fulfill this order" itemValue="08 Unable to fulfill this order" />
+                        </p:selectOneMenu>
                     </h:panelGrid>
                     <p:separator />
                     <p:commandButton value="Reject this Order" actionListener="#{productReturnManagedBean.rejectWhole()}" icon="ui-icon-check" />
