--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
@@ -29,7 +29,7 @@
                                 <p:menuitem value="View All Locations" url="viewalllocation.xhtml" />
                             </p:submenu>
                             <p:submenu label="Transportation Asset" >
-                                <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
+                                <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" style="background-color: lavender"/>
                                 <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
                             </p:submenu>
  
