--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -30,7 +30,7 @@
                             </p:submenu>
                             <p:submenu label="Transportation Asset" >
                                 <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
-                                <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
+                                <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" style="background-color: lavender" />
                             </p:submenu>
  
                         </p:submenu>
