--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewlocation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewlocation.xhtml
@@ -16,6 +16,7 @@
         <ui:define name="more-imports">
             <ui:insert>
                 <!--                import CSS style or Javascript here, if any-->
+
             </ui:insert>
         </ui:define>
         
@@ -25,7 +26,7 @@
                         <p:submenu label =" Manage Your Transportation">
                             <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
                             <p:submenu label="Location" >
-                                <p:menuitem value="Add A Location" url="addnewlocation.xhtml" />
+                                <p:menuitem value="Add A Location" url="addnewlocation.xhtml" style="background-color: lavender" />
                                 <p:menuitem value="View All Locations" url="viewalllocation.xhtml" />
                             </p:submenu>
                             <p:submenu label="Transportation Asset" >
