--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalllocation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalllocation.xhtml
@@ -16,6 +16,7 @@
         <ui:define name="more-imports">
             <ui:insert>
                 <!--                import CSS style or Javascript here, if any-->
+
             </ui:insert>
         </ui:define>
         
@@ -24,9 +25,9 @@
                     <p:panelMenu>
                         <p:submenu label =" Manage Your Transportation">
                             <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
-                            <p:submenu label="Location" >
+                            <p:submenu label="Location" rendered="">
                                 <p:menuitem value="Add A Location" url="addnewlocation.xhtml" />
-                                <p:menuitem value="View All Locations" url="viewalllocation.xhtml" />
+                                <p:menuitem value="View All Locations" url="viewalllocation.xhtml" style="background-color: lavender"/>
                             </p:submenu>
                             <p:submenu label="Transportation Asset" >
                                 <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
