--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalllocation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalllocation.xhtml
@@ -25,10 +25,11 @@
                     <p:panelMenu>
                         <p:submenu label =" Manage Your Transportation">
                             <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
-                            <p:submenu label="Location" rendered="">
+                            <p:submenu label="Location" >
                                 <p:menuitem value="Add A Location" url="addnewlocation.xhtml" />
                                 <p:menuitem value="View All Locations" url="viewalllocation.xhtml" style="background-color: lavender"/>
                             </p:submenu>
+                            
                             <p:submenu label="Transportation Asset" >
                                 <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
                                 <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
