--- a/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
@@ -24,7 +24,7 @@
 
                     <p:panelMenu>
                         <p:submenu label =" Manage Your Transportation">
-                            <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                            <p:menuitem value="TMS Home" url="tmsindex.xhtml" style="background-color: lavender"/>
                             <p:submenu label="Location" >
                                 <p:menuitem value="Add A Location" url="addnewlocation.xhtml" />
                                 <p:menuitem value="View All Locations" url="viewalllocation.xhtml" />
