--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
@@ -27,7 +27,7 @@
                 <p:submenu label =" Manage Your Warehouse">
                     <p:menuitem value="WMS" url="wmsindex.xhtml" />
                     <p:submenu label="Warehouse" >
-                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" style="background-color: lavender"/>
                         <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
                     </p:submenu>
                     <p:submenu label="Storage Type" >
