--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -27,7 +27,7 @@
                     <p:menuitem value="WMS" url="wmsindex.xhtml" />
                     <p:submenu label="Warehouse" >
                         <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" style="background-color: lavender"/>
                     </p:submenu>
                     <p:submenu label="Storage Type" >
                         <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
