--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
@@ -34,7 +34,7 @@
                     </p:submenu>
                     <p:submenu label="Storage Bin" >
                         <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" style="background-color: lavender"/>
                     </p:submenu>
                 </p:submenu>
             </p:panelMenu>
