--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
@@ -30,7 +30,7 @@
                     </p:submenu>
                     <p:submenu label="Storage Type" >
                         <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
-                        <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
+                        <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" style="background-color: lavender"/>
                     </p:submenu>
                     <p:submenu label="Storage Bin" >
                         <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
