--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -22,7 +22,7 @@
         <ui:define name="left">
                 <p:panelMenu>
                     <p:submenu label =" Manage Your Warehouse">
-                        <p:menuitem value="WMS" url="wmsindex.xhtml" />
+                        <p:menuitem value="WMS" url="wmsindex.xhtml" style="background-color: lavender"/>
                         <p:submenu label="Warehouse" >
                             <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
                             <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
