--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
@@ -33,7 +33,7 @@
                         <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                     </p:submenu>
                     <p:submenu label="Storage Bin" >
-                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" style="background-color: lavender"/>
                         <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
                     </p:submenu>
                 </p:submenu>
