--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
@@ -29,7 +29,7 @@
                         <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
                     </p:submenu>
                     <p:submenu label="Storage Type" >
-                        <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
+                        <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" style="background-color: lavender"/>
                         <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                     </p:submenu>
                     <p:submenu label="Storage Bin" >
