--- a/MerlionPortal/MerlionPortal-war/web/mrp/addnewcomponent.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/addnewcomponent.xhtml
@@ -33,7 +33,7 @@
                                 <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
                             </p:submenu>
                             <p:submenu label="BOM Management">
-                                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" style="background-color: lavender"/>
                                 <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
                             </p:submenu>
                         </p:submenu>
