--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecast.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecast.xhtml
@@ -42,7 +42,7 @@
                     <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Material Requirement Planning" styleClass="display:block">
                             <p:submenu label="Forecasting">
-                                <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                                <p:menuitem value="Forecasting" url="forecast.xhtml" style="background-color: lavender"/>
                             </p:submenu>
                         </p:submenu>
                     </c:if>
