--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
@@ -30,7 +30,7 @@
                         <p:submenu label="Product Management" styleClass="display:block">
                             <p:submenu label="Product Catalog Management">
                                 <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                                <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
+                                <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" style="background-color: lavender"/>
                             </p:submenu>
                             <p:submenu label="BOM Management">
                                 <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
