--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -24,8 +24,8 @@
         <ui:define name="left">
             <h:form id="formMain">
                 <p:panelMenu>
-                    <p:submenu label="HOME" styleClass="display:block">
-                        <p:menuitem value="MRP II Home" url="mrp.xhtml" />
+                    <p:submenu label="MRP HOME" styleClass="display:block">
+                        <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Product Management" styleClass="display:block">
