reset password alignment edit

--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -20,8 +20,9 @@
                             <h2>Reset Password</h2>
                             <p>To reset your password, kindly enter your email below and we will send you a newly generated password. Thank you.</p>
                         </div>
-                    </div><div class="row">
-                        <div class="col-md-10 form-control-spacing">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-5 form-control-spacing">
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     Email
@@ -34,15 +35,12 @@
                         <div class="col-md-2">
                             <img id="loadingImg" src="img/load.gif" class="loader hide" />
                         </div>
-                        <div class="col-md-8">
-                            <div class="pull-right">
-                                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
-
-                                <h:commandButton styleClass="btn btn-success btnResetEmail" actionListener="#{resetPasswordBean.requestPasswordChange}" value="Reset Password">
-
-                                </h:commandButton>
-                            </div>
-                        </div>
+                    </div>
+                    <br/>
+                    <div>
+                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
+                        <h:commandButton styleClass="btn btn-success btnResetEmail" actionListener="#{resetPasswordBean.requestPasswordChange}" value="Reset Password">
+                        </h:commandButton>
                     </div>
                 </div>
             </h:form>
