reset password alignment edit

--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -37,10 +37,12 @@
                         </div>
                     </div>
                     <br/>
-                    <div>
-                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
-                        <h:commandButton styleClass="btn btn-success btnResetEmail" actionListener="#{resetPasswordBean.requestPasswordChange}" value="Reset Password">
-                        </h:commandButton>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
+                            <h:commandButton styleClass="btn btn-success btnResetEmail" actionListener="#{resetPasswordBean.requestPasswordChange}" value="Reset Password">
+                            </h:commandButton>
+                        </div>
                     </div>
                 </div>
             </h:form>
