--- a/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
@@ -118,9 +118,9 @@
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                 <p:panel header="Reject Whole Order" style="margin-bottom:10px;">
                     <h:panelGrid columns="2" cellpadding="5">
-                        <h:outputLabel value="Reject Reson " />
-                        <p:selectOneMenu id="reson" value="#{productReturnManagedBean.reason}" style="width:150px">
-                            <f:selectItem itemLabel="Select Reject Reson" itemValue="" noSelectionOption="true" />
+                        <h:outputLabel value="Reject Reason " />
+                        <p:selectOneMenu id="reason" value="#{productReturnManagedBean.reason}" style="width:150px">
+                            <f:selectItem itemLabel="Select Reject Reason" itemValue="" noSelectionOption="true" />
                             <f:selectItem itemLabel="01 Wrong product" itemValue="01 Wrong product"  />
                             <f:selectItem itemLabel="02 Wrong product quantity" itemValue="02 Wrong product quantity" />
                             <f:selectItem itemLabel="03 Wrong price" itemValue="03 Wrong price" />
