--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
@@ -23,7 +23,7 @@
 
             <p:panelMenu>
                 <p:submenu label =" Manage Your Warehouse">
-                    <p:menuitem value="WMS" url="wmsindex.xhtml" />
+                    <p:menuitem value="WMS home" url="wmsindex.xhtml" />
                     <p:submenu label="Warehouse" >
                         <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
                         <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
